fix search filters on IOS

--- a/client/src/styles/base/base.scss
+++ b/client/src/styles/base/base.scss
@@ -5,7 +5,7 @@
 }
 
 html {
-  $header-color: $primary-color;
+  $header-color: $body-bg;
   $footer-color: $gray-light;
   background-color: $black; // seen when overscrolling the page on IOS. Apparently only works with solid colors?
   background: linear-gradient(to bottom, rgba($header-color,1) 0%,rgba($header-color,1) 50%,rgba($footer-color,1) 51%,rgba($footer-color,1) 100%);
