--- a/client/src/styles/components/navigation/v2/_nav.scss
+++ b/client/src/styles/components/navigation/v2/_nav.scss
@@ -795,8 +795,11 @@ body.nav-open { // prevent scroll on mobile
   position: -webkit-sticky;
   position: sticky;
   top: $nav-height;
-  overflow-y: auto;
-  max-height: 100vh;
+
+  @include breakpoint(sm) {
+    overflow-y: auto;
+    max-height: 100vh;
+  }
 
   @include breakpoint-max(md) {
     top: 0;
